<resources>
    <string name="app_name">Notes Detector</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <string name="menu_home">My notes</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="note_action_rename">Rename</string>
    <string name="note_action_delete">Delete</string>
    <string name="rename_note_title">Rename file</string>
    <string name="rename_note_hint">Enter a new file name</string>
    <string name="rename_note_confirm">Save</string>
    <string name="rename_note_empty_error">File name cannot be empty</string>
    <string name="delete_note_title">Delete file</string>
    <string name="delete_note_message">Delete "%1$s"?</string>
    <string name="delete_note_confirm">Delete</string>
    <string name="selected_audio">Selected audio</string>
    <string name="retry">Retry</string>
    <string name="play_source_audio">Play source audio</string>
    <string name="audio_play_error">Unable to play this audio file.</string>
    <string name="start_recording">Start recording</string>
    <string name="stop_recording">Stop recording</string>
    <string name="use_recording">Use this recording</string>
    <string name="recording_idle">Tap start to record audio</string>
    <string name="recording_in_progress">Recording…</string>
    <string name="recording_ready">Recording is ready</string>
    <string name="record_permission_denied">Microphone permission is required</string>
    <string name="record_start_error">Could not start recording</string>
    <string name="recording_saved">Recording saved</string>
    <string name="no_recording_yet">Record audio first</string>
    <string name="show_sheet_music">Show Sheet music</string>
    <string name="show_tabs">Show Tabs</string>
    <string name="my_notes">My notes</string>
    <string name="export_midi">Export to MIDI</string>
    <string name="no_notes_to_export">No notes to export</string>
    <string name="midi_export_success">MIDI exported: %1$s</string>
    <string name="midi_export_failed">MIDI export failed: %1$s</string>
    <string name="midi_export_cancelled">MIDI export cancelled</string>
    <string name="playback_mode_original">Playback: Original</string>
    <string name="playback_mode_transcribed">Playback: Transcribed</string>
    <string name="toggle_playback_mode">Switch playback source</string>
    <string name="no_playback_source">No playable source available</string>
    <string name="transcription_progress">Transcribing… %1$d%%</string>
    <string name="time_signature_label">Time signature</string>
    <string name="time_signature_hint">e.g. 4/4</string>
    <string name="search_note_hint">Search by file name</string>
</resources>
